tests/paczka2/big_fuzzy/24728406.err
Error in line 1: GOcP4G6 A777 67,4
Error in line 8: K9TbvV S684 49,7
Error in line 19: 4gCqWp8 A777 53,8
Error in line 21: 4gCqWp8 A119 97,6
Error in line 35: GOcP4G6 A119 83,9
Error in line 39: GOcP4G6 A777 97,8
Error in line 54: 4gCqWp8 A777 92,0
Error in line 53: GOcP4G6 A119 41,4
Error in line 50: NTWAdiH A777 3,2
Error in line 60: K9TbvV A777 39,3
Error in line 63: K9TbvV S365 34,1
Error in line 56: 4gCqWp8 S365 35,2
Error in line 69: GOcP4G6 S365 88,9
Error in line 81: 4gCqWp8 ACC9 42,5
Error in line 75: 4gCqWp8 S365 96,7
Error in line 72: NTWAdiH S684 33,1
Error in line 83: 4gCqWp8 A777 72,8
Error in line 87: 4gCqWp8 S365 62,1
Error in line 88: 4gCqWp8 A119 27,9
Error in line 65: K9TbvV A119 75,1
Error in line 64: TuMtbvXISa A119 72,4
Error in line 105: cXEZfNtJftF A777 65,2
Error in line 107: cXEZfNtJftF A119 11,0
Error in line 112: cXEZfNtJftF A777 44,5
Error in line 117: GOcP4G6 A777 91,33
Error in line 103: NTWAdiH S365 380,4
Error in line 124: K9TbvV S684 67,1
Error in line 127: A777 A119 29,3
Error in line 123: NTWAdiH S684 54,6
Error in line 130: NTWAdiH A777 59,3
Error in line 138: A777 S684 5,4
Error in line 145: TuMtbvXISa A119 96,1
Error in line 144: 4gCqWp8 S365 9,0
Error in line 154: NTWAdiH A777 279,0
Error in line 159: 4gCqWp8 A777 43,9
Error in line 162: 4gCqWp8 A119 96,8
Error in line 169: TuMtbvXISa A777 28,96
Error in line 167: cXEZfNtJftF A777 50,7
Error in line 171: cXEZfNtJftF S684 -4,9
Error in line 165: GOcP4G6 A777 47,6
Error in line 170: cXEZfNtJftF S684 77,9
Error in line 180: TuMtbvXISa A777 519,0
Error in line 186: cXEZfNtJftF S365 43,6
Error in line 209: A777 S684 31,10
Error in line 219: 4gCqWp8 S684 94,3
Error in line 227: 4gCqWp8 A119 59,6
Error in line 220: GOcP4G6 S684 91,2
Error in line 237: NTWAdiH A777 200,0
Error in line 232: cXEZfNtJftF S684 43,7
